--- a/config-3/menus.yml
+++ b/config-3/menus.yml
@@ -1,4 +1,5 @@
 # Unused actions in menus
+#         - application::dont_cache
 #         - companies::register
 #         - dashboards::accountancy
 #         - dashboards::finances
@@ -377,13 +378,13 @@ menus:
         - cash_transfers::show
         - cash_transfers::update
     - incoming_payments:
-      - - incoming_payments::list
+      - - incoming_payments::index
         - incoming_payment_uses::create
         - incoming_payment_uses::destroy
         - incoming_payment_uses::new
         - incoming_payments::destroy
         - incoming_payments::edit
-        - incoming_payments::index
+        - incoming_payments::list
         - incoming_payments::list_sales
         - incoming_payments::show
         - incoming_payments::update
@@ -547,6 +548,7 @@ menus:
         - inventories::list_lines_update
         - inventories::new
         - inventories::reflect
+        - inventories::show
         - inventories::update
       - - incoming_deliveries::index
         - incoming_deliveries::confirm
