--- a/test/fixtures/document_templates.yml
+++ b/test/fixtures/document_templates.yml
@@ -57,12 +57,14 @@
 #
 document_templates_001:
   active: true
+  code: "document"
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   by_default: true
   id: 1
   name: "Lorem ipsum"
+  source: "<?xml version='1.0' encoding='utf-8'?>"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -74,6 +76,7 @@ document_templates_002:
   by_default: true
   id: 2
   name: "Lorem ipsum"
+  source: "<?xml version='1.0' encoding='utf-8'?>"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
