--- a/test/fixtures/document_templates.yml
+++ b/test/fixtures/document_templates.yml
@@ -55,6 +55,7 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 document_templates_001:
   active: true
   code: "document"
@@ -64,7 +65,7 @@ document_templates_001:
   by_default: true
   id: 1
   name: "Lorem ipsum"
-  source: "<?xml version='1.0' encoding='utf-8'?>"
+  source: "<?xml version='1.0' encoding='utf-8'?><template><document></document></template>"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
