--- a/test/fixtures/listing_nodes.yml
+++ b/test/fixtures/listing_nodes.yml
@@ -78,12 +78,15 @@ listing_nodes_002:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  parent_id: 3
   exportable: true
   id: 2
-  label: "Useless Lorem ipsum"
-  listing_id: 2
-  name: "entity"
-  nature: "root"
+  label: "Dest"
+  listing_id: 1
+  name: "contact_0.line_2"
+  attribute_name: "line_2"
+  sql_type: "string"
+  nature: "column"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   key: <%='k'+rand.to_s[2..-1]+'d'%>
