--- a/test/fixtures/operation_lines.yml
+++ b/test/fixtures/operation_lines.yml
@@ -54,3 +54,30 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
+operation_lines_001:
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  direction: "in"
+  id: 1
+  operation_id: 1
+  product_id: 1
+  quantity: 0
+  unit_quantity: 0
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+operation_lines_002:
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  direction: "out"
+  id: 2
+  operation_id: 1
+  product_id: 1
+  quantity: 0
+  unit_quantity: 0
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
