--- a/test/fixtures/operation_uses.yml
+++ b/test/fixtures/operation_uses.yml
@@ -43,3 +43,24 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
+
+operation_uses_001:
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  operation_id: 1
+  tool_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+operation_uses_002:
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  operation_id: 1
+  tool_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
