--- a/test/fixtures/outgoing_payment_modes.yml
+++ b/test/fixtures/outgoing_payment_modes.yml
@@ -46,6 +46,7 @@
 #   with_accounting: true
 #
 outgoing_payment_modes_001:
+  cash_id: 1
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
