--- a/test/fixtures/outgoing_payment_uses.yml
+++ b/test/fixtures/outgoing_payment_uses.yml
@@ -49,3 +49,28 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
+outgoing_payment_uses_001:
+  amount: 0
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  downpayment: true
+  expense_id: 1
+  id: 1
+  payment_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+outgoing_payment_uses_002:
+  amount: 0
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  downpayment: true
+  expense_id: 1
+  id: 2
+  payment_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
