--- a/test/fixtures/sales.yml
+++ b/test/fixtures/sales.yml
@@ -91,13 +91,14 @@
 #   updater_id: 1
 #
 sales_001:
-  amount: 0
-  pretax_amount: 0
+  amount: 123
+  pretax_amount: 123
   client_id: 1
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   created_on: 2009-07-19
   creator_id: 1
+  currency_id: 1
   downpayment_amount: 0
   expiration_id: 1
   expired_on: 2009-07-19
@@ -177,6 +178,30 @@ sales_004:
   payment_delay_id: 1
   pretax_amount: 10
   state: "draft"
+  sum_method: "wt"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+sales_005:
+  amount: 123
+  pretax_amount: 123
+  client_id: 1
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  created_on: 2009-07-19
+  creator_id: 1
+  currency_id: 1
+  downpayment_amount: 0
+  expiration_id: 1
+  expired_on: 2009-07-19
+  has_downpayment: true
+  id: 5
+  letter_format: true
+  nature_id: 1
+  number: "SO123460"
+  paid_amount: 0.0
+  payment_delay_id: 1
+  state: "order"
   sum_method: "wt"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
