Fixes bugs on ajax call using POST method instead of GET method. Completes changelog with older versions
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1831 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/rights.yml
+++ b/config-3/rights.yml
@@ -39,6 +39,7 @@
 # Access to the minimum
 __minimum__:
   actions:
+  - dashboards::general
   - dashboards::list_my_future_events
   - dashboards::list_recent_events
   - dashboards::welcome
