--- a/test/fixtures/stocks.yml
+++ b/test/fixtures/stocks.yml
@@ -56,3 +56,33 @@
 #   virtual_quantity: 0
 #   warehouse_id: 1
 #
+
+stocks_001:
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  critic_quantity_min: 0
+  id: 1
+  product_id: 1
+  quantity: 5
+  quantity_max: 200
+  quantity_min: 4
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  virtual_quantity: 0
+  warehouse_id: 1
+
+stocks_002:
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  critic_quantity_min: 0
+  id: 2
+  product_id: 1
+  quantity: 0
+  quantity_max: 0
+  quantity_min: 0
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  virtual_quantity: 0
+  warehouse_id: 3
