--- a/test/fixtures/warehouses.yml
+++ b/test/fixtures/warehouses.yml
@@ -71,3 +71,12 @@ warehouses_002:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
+warehouses_003:
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
+  name: "Grange"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
