--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ env:
   - DB=mysql
   - DB=postgresql
   - DB=sqlite3
-before_script: "ci/setup_database.rb"
+before_script: "ci/setup"
 script: "bundle exec rake db:migrate test"
