Removes rake 0.8.7 from Gemfile

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 .bundle
 db/*.sqlite3
 log/*.log
-tmp/**/*
+tmp/*
 private/**/*
 installer/releases
 installer/*.log
 config*/database.yml
 *~
-**/*~
