--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 rvm:
   - 1.8.7
-  #- 1.9.2
+  - 1.9.2
   #- 1.9.3
 env:
-  #- DB=mysql
-  #- DB=postgresql
+  - DB=mysql
+  - DB=postgresql
   - DB=sqlite3
 before_script: 
   - "ci/setup"
