--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -101,11 +101,14 @@ products_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
+  deliverable: true
   stockable: true
   name: "Lorem ipsum"
   nature: "product"
   number: 0
   reduction_submissive: true
+  sales_account_id: 1
+  purchases_account_id: 1
   category_id: 1
   for_productions: true
   for_purchases: true
@@ -122,11 +125,14 @@ products_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
+  deliverable: true
   stockable: true
   name: "Lorem ipsum 2"
   nature: "product"
   number: 0
   reduction_submissive: true
+  sales_account_id: 1
+  purchases_account_id: 1
   category_id: 1
   for_productions: true
   for_purchases: true
@@ -143,11 +149,14 @@ products_003:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 3
+  deliverable: true
   stockable: true
   name: "Lorem ipsum 3"
   nature: "product"
   number: 0
   reduction_submissive: true
+  sales_account_id: 1
+  purchases_account_id: 1
   category_id: 1
   for_productions: true
   for_purchases: true
