--- a/config/menus.yml
+++ b/config/menus.yml
@@ -40,6 +40,7 @@
 #         - interfacers::toggle_module
 #         - interfacers::toggle_side
 #         - interfacers::toggle_tab
+#         - interfacers::toggle_view_mode
 #         - interfacers::unroll_options
 #         - professions::create
 #         - professions::destroy
