Adds import action for accountancy and isacompta

--- a/config/menus.yml
+++ b/config/menus.yml
@@ -42,6 +42,7 @@
 #         - interfacers::toggle_tab
 #         - interfacers::toggle_view_mode
 #         - interfacers::unroll_options
+#         - journals::import
 #         - professions::create
 #         - professions::destroy
 #         - professions::edit
@@ -331,6 +332,7 @@ menus:
         - accounts::mark
         - accounts::unmark
       - - journals::bookkeep
+      - - journals::import
     - reporting:
       - - journals::reports
       - - journals::balance
