--- a/config/rights.yml
+++ b/config/rights.yml
@@ -489,13 +489,16 @@ manage_financial_years:
   actions:
   - dashboards::accountancy
   - financial_years::close
+  - financial_years::compute_balances
   - financial_years::create
   - financial_years::destroy
   - financial_years::edit
   - financial_years::index
   - financial_years::list
+  - financial_years::list_account_balances
   - financial_years::new
   - financial_years::show
+  - financial_years::synthesis
   - financial_years::update
 # Manage incoming delivery modes
 manage_incoming_delivery_modes:
