Updates build scripts

--- a/installer/source/build
+++ b/installer/source/build
@@ -10,7 +10,7 @@ mkdir packages
 
 if [ -n "`which zip`" ]; then
     echo " * Zip source" >> $log
-    zip -r packages/${source}.zip ${app} -x "*.svn*" >> $log
+    zip -r packages/${source}.zip ${app} -x *.svn* log/*.log >> $log
 else
     echo " * No zip command. Run 'apt-get install zip'"
     echo " * No zip command. Run 'apt-get install zip'" >> $log
@@ -18,9 +18,9 @@ fi
 
 if [ -n "`which tar`" ]; then
     echo " * Gzip source" >> $log
-    tar cfvhz packages/${source}.tar.gz  --exclude=.svn ${app} >> $log
+    tar cfvhz packages/${source}.tar.gz  --exclude=.svn --exclude=log/*.log ${app} >> $log
     echo " * Bzip source" >> $log
-    tar cfvhj packages/${source}.tar.bz2 --exclude=.svn ${app} >> $log
+    tar cfvhj packages/${source}.tar.bz2 --exclude=.svn --exclude=log/*.log ${app} >> $log
 else
     echo " * No tar command. Run 'apt-get install tar'"
     echo " * No tar command. Run 'apt-get install tar'" >> $log
