Fixes Xil 2.0 bug on iteration due to new compiler

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -78,7 +78,7 @@ users_001:
   employed: true
   first_name: Mikawel
   last_name: Makinous
-  name: mikmak
+  name: gendo
   language: fra
   locked: false 
   rights: ''
