Changes driver for MySQL databases with mysql2

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ env:
   - DB=sqlite3
 before_script: 
   - "ci/setup"
+  - "env -u RAILS_ENV" # Removes RAILS_ENV variable which seems to be set
   - "bundle exec rake db:migrate"
 script: "bundle exec rake test"
