Changes version of mysql2 gem and make a good unset in CI before script

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   - DB=sqlite3
 before_script: 
   - "ci/setup"
-  - "env -u RAILS_ENV" # Removes RAILS_ENV variable which seems to be set
+  - "unset RAILS_ENV" # Removes RAILS_ENV variable which seems to be set
+  - "unset RACK_ENV" # Removes RACK_ENV variable which seems to be set
   - "bundle exec rake db:migrate"
 script: "bundle exec rake test"
