--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   - DB=sqlite3
 before_script: 
   - "ci/setup"
-  - "unset RAILS_ENV" # Removes RAILS_ENV variable which seems to be set
-  - "unset RACK_ENV" # Removes RACK_ENV variable which seems to be set
+  - "export RAILS_ENV=" # Removes RAILS_ENV variable which seems to be set
+  - "export RACK_ENV=" # Removes RACK_ENV variable which seems to be set
   - "bundle exec rake db:migrate"
 script: "bundle exec rake test"
