Cleans .travis.yml to remove env var affectation

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ rvm:
   - 1.9.2
   - 1.9.3
 env:
-  - DB=mysql RAILS_ENV= RACK_ENV=
-  - DB=postgresql RAILS_ENV= RACK_ENV=
-  - DB=sqlite3 RAILS_ENV= RACK_ENV=
+  - DB=mysql
+  - DB=postgresql
+  - DB=sqlite3
 before_script: 
   - "ci/setup"
   - "bundle exec rake db:migrate"
