--- a/test/fixtures/currencies.yml
+++ b/test/fixtures/currencies.yml
@@ -27,7 +27,6 @@
 #  company_id   :integer          not null
 #  created_at   :datetime         not null
 #  creator_id   :integer          
-#  format       :string(16)       not null
 #  id           :integer          not null, primary key
 #  lock_version :integer          default(0), not null
 #  name         :string(255)      not null
@@ -35,6 +34,7 @@
 #  symbol       :string(255)      default("-"), not null
 #  updated_at   :datetime         not null
 #  updater_id   :integer          
+#  value_format :string(16)       not null
 #
 #
 # == Fixture: currencies
@@ -46,13 +46,13 @@
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
-#   format: "Lorem ipsum"
 #   id: 1
 #   name: "Lorem ipsum"
 #   rate: 0
 #   symbol: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
+#   value_format: "Lorem ipsum"
 #
 currencies_001:
   active: true
@@ -60,7 +60,7 @@ currencies_001:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  format: "% €"
+  value_format: "% €"
   id: 1
   name: "Euro"
   rate: 1
@@ -74,7 +74,7 @@ currencies_002:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  format: "% F"
+  value_format: "% F"
   id: 2
   name: "Franc français"
   rate: 6.55957
