--- a/test/fixtures/entity_natures.yml
+++ b/test/fixtures/entity_natures.yml
@@ -20,20 +20,20 @@
 # 
 # == Table: entity_natures
 #
-#  active       :boolean          default(TRUE), not null
-#  company_id   :integer          not null
-#  created_at   :datetime         not null
-#  creator_id   :integer          
-#  description  :text             
-#  format       :string(255)      
-#  id           :integer          not null, primary key
-#  in_name      :boolean          default(TRUE), not null
-#  lock_version :integer          default(0), not null
-#  name         :string(255)      not null
-#  physical     :boolean          not null
-#  title        :string(255)      
-#  updated_at   :datetime         not null
-#  updater_id   :integer          
+#  active           :boolean          default(TRUE), not null
+#  company_id       :integer          not null
+#  created_at       :datetime         not null
+#  creator_id       :integer          
+#  description      :text             
+#  full_name_format :string(255)      
+#  id               :integer          not null, primary key
+#  in_name          :boolean          default(TRUE), not null
+#  lock_version     :integer          default(0), not null
+#  name             :string(255)      not null
+#  physical         :boolean          not null
+#  title            :string(255)      
+#  updated_at       :datetime         not null
+#  updater_id       :integer          
 #
 #
 # == Fixture: entity_natures
@@ -57,7 +57,7 @@ entity_natures_001:
   physical: false
   active: true
   title: C.
-  format: '[last_name]'
+  full_name_format: '[last_name]'
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -70,7 +70,7 @@ entity_natures_002:
   in_name: true
   physical: false
   active: true
-  title: '[last_name]'
+  full_name_format: '[last_name]'
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
